fix start battle button on ie

--- a/packages/@coorpacademy-components/src/molecule/dashboard/start-battle/style.css
+++ b/packages/@coorpacademy-components/src/molecule/dashboard/start-battle/style.css
@@ -119,6 +119,7 @@
   line-height: 20px;
   letter-spacing: 4px;
   display: flex;
+  width: inherit;
   flex-direction: column;
 }
 
